tests/paczka2/big_fuzzy/17891975.err
Error in line 6: gGaB3 A952 87,2
Error in line 7: gGaB3 A350 18,0
Error in line 5: A952 A669 98,1
Error in line 16: diuDu4O1l A669 16,5
Error in line 26: XGvd0V6qbWN A669 90,4
Error in line 25: A952 A350 54,2
Error in line 40: XGvd0V6qbWN S260 82,3
Error in line 20: gGaB3 A669 153,1
Error in line 49: gGaB3 A952 2,3
Error in line 56: JYSPW A952 40,2
Error in line 38: A952 S260 10,8
Error in line 60: A952 A952 88,1
Error in line 65: yJvcu A952 266,4
Error in line 71: A952 A669 55,1
Error in line 76: XGvd0V6qbWN S260 38,9
Error in line 102: fzT4zhU S260 63,0
Error in line 116: yJvcu A952 -2,4
Error in line 126: diuDu4O1l S260 48,8
Error in line 129: gGaB3 A669 74,9
Error in line 119: fzT4zhU A350 163,5
Error in line 142: diuDu4O1l A952 51,0
Error in line 135: yJvcu A952 90,9
Error in line 159: yJvcu A669 276,10
Error in line 163: diuDu4O1l A350 4g,1
Error in line 162: A952 A350 36,1
Error in line 164: XGvd0V6qbWN A952 79,6
Error in line 181: A952 A952 159,7
Error in line 185: A952 A669 85,4
Error in line 158: yJvcu A669 73,4
Error in line 196: yJvcu A952 64,7
Error in line 197: yJvcu A350 34,1
Error in line 194: fzT4zhU A669 6,8
Error in line 195: A952 A669 50,9
Error in line 203: gGaB3 S260 23,8
Error in line 201: diuDu4O1l A952 159,9
Error in line 220: JYSPW S260 25,3
Error in line 222: JYSPW A350 63,8
Error in line 227: fzT4zhU A350 327,8
Error in line 235: gGaB3 A669 75,39
Error in line 221: A952 A350 50,5
Error in line 240: A952 S260 286,0
Error in line 229: yJvcu A669 32,0
Error in line 246: gGaB3 A350 34,2
